--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,7 @@ crossterm = "0.28.1"
 derive_more = { version = "2.0.1", features = ["from"] }
 dirs = "6.0.0"
 serde = { version = "1.0.219", features = ["derive"] }
+tempfile = "3.19.0"
 thiserror = "2.0.12"
 toml = "0.8.20"
+walkdir = "2.5.0"
