--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,13 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.97"
+bincode = "2.0.1"
 clap = { version = "4.5.32", features = ["derive"] }
 crossterm = "0.28.1"
 derive_more = { version = "2.0.1", features = ["from"] }
 dirs = "6.0.0"
 serde = { version = "1.0.219", features = ["derive"] }
+sha2 = "0.10.8"
 tempfile = "3.19.0"
 thiserror = "2.0.12"
 toml = "0.8.20"
