--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ clap = { version = "4.5.32", features = ["derive"] }
 crossterm = "0.28.1"
 derive_more = { version = "2.0.1", features = ["from"] }
 dirs = "6.0.0"
+env_logger = "0.11.7"
+log = "0.4.26"
 serde = { version = "1.0.219", features = ["derive"] }
 sha2 = "0.10.8"
 tempfile = "3.19.0"
