--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ derive_more = { version = "2.0.1", features = ["from"] }
 dirs = "6.0.0"
 env_logger = "0.11.7"
 log = "0.4.26"
-serde = { version = "1.0.219", features = ["derive"] }
+serde = { version = "1.0.219", features = ["derive", "rc"] }
 sha2 = "0.10.8"
 thiserror = "2.0.12"
 toml = "0.8.20"
