--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ clap = { version = "4.5.32", features = ["derive"] }
 crossterm = "0.28.1"
 derive_more = { version = "2.0.1", features = ["from"] }
 dirs = "6.0.0"
+itertools = "0.14.0"
 serde = { version = "1.0.219", features = ["derive", "rc"] }
 sha2 = "0.10.8"
 thiserror = "2.0.12"
