--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ crossterm = "0.28.1"
 derive_more = { version = "2.0.1", features = ["from"] }
 dirs = "6.0.0"
 itertools = "0.14.0"
+nix = { version = "0.29.0", features = ["user"] }
 serde = { version = "1.0.219", features = ["derive", "rc"] }
 sha2 = "0.10.8"
 thiserror = "2.0.12"
