--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ clap = { version = "4.5.32", features = ["derive"] }
 crossterm = "0.28.1"
 derive_more = { version = "2.0.1", features = ["from"] }
 dirs = "6.0.0"
+hex = "0.4.3"
 itertools = "0.14.0"
 nix = { version = "0.29.0", features = ["user"] }
 serde = { version = "1.0.219", features = ["derive", "rc"] }
