--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ derive_more = { version = "2.0.1", features = ["from"] }
 dirs = "6.0.0"
 globset = "0.4.16"
 hex = "0.4.3"
+indexmap = "2.9.0"
 itertools = "0.14.0"
 nix = { version = "0.29.0", features = ["user"] }
 serde = { version = "1.0.219", features = ["derive", "rc"] }
