--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,4 +19,5 @@ serde = { version = "1.0.219", features = ["derive", "rc"] }
 sha2 = "0.10.8"
 thiserror = "2.0.12"
 toml = "0.8.20"
+upon = "0.9.0"
 walkdir = "2.5.0"
