--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ hex = "0.4.3"
 indexmap = "2.9.0"
 itertools = "0.14.0"
 nix = { version = "0.29.0", features = ["user"] }
+reqwest = { version = "0.12.15", features = ["blocking"] }
 serde = { version = "1.0.219", features = ["derive", "rc"] }
 sha2 = "0.10.8"
 thiserror = "2.0.12"
