--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,10 @@ strip = true
 lto = true
 codegen-units = 1
 
+[features]
+default = ["http"]
+http = ["dep:reqwest"]
+
 [dependencies]
 anyhow = "1.0.97"
 bincode = "2.0.1"
@@ -20,7 +24,7 @@ hex = "0.4.3"
 indexmap = "2.9.0"
 itertools = "0.14.0"
 nix = { version = "0.29.0", features = ["user"] }
-reqwest = { version = "0.12.15", features = ["blocking"] }
+reqwest = { version = "0.12.15", features = ["blocking"], optional = true }
 serde = { version = "1.0.219", features = ["derive", "rc"] }
 sha2 = "0.10.8"
 thiserror = "2.0.12"
