--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ http = ["dep:reqwest"]
 [dependencies]
 anyhow = "1.0.97"
 bincode = "2.0.1"
-clap = { version = "4.5.32", features = ["derive"] }
+clap = { version = "4.5.38", features = ["cargo"] }
 crossterm = "0.28.1"
 derive_more = { version = "2.0.1", features = ["display", "from"] }
 dirs = "6.0.0"
