--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ nix = { version = "0.29.0", features = ["user"] }
 reqwest = { version = "0.12.15", features = ["blocking"], optional = true }
 serde = { version = "1.0.219", features = ["derive", "rc"] }
 sha2 = "0.10.8"
+termtree = "0.5.1"
 thiserror = "2.0.12"
 toml = "0.8.20"
 upon = "0.9.0"
